# python-remote-photoplethysmography

./: .gitignore  README.md  main.py  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md
examples/: video_file_demo.py  webcam_demo.py
src/: main.py
src/algorithms/: base.py  green.py
src/core/: face_detector.py  signal_extractor.py
src/signal_processing/: filters.py  heart_rate_estimator.py
tests/: test_basic.py
