[project]
name = "python-remote-photoplethysmography"
version = "0.1.0"
description = "Remote heart rate monitoring using rPPG technology"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "opencv-python>=4.8.0,<5.0.0",
    "mediapipe==0.10.14",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "PyWavelets>=1.4.1",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rppg-webcam = "examples.webcam_demo:main"
rppg-video = "examples.video_file_demo:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "examples"]
